# lrc2cdg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  alphabet.json  genmask.py  lrc2cdg.cpp  setenvs.sh
